# bee

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  bee.toml  code_coverage.sh  rusk.toml
completion/: _bee  _rusk
crates/bee-actions/: Cargo.toml
crates/bee-actions/src/: action_add.rs  action_annotate.rs  action_cmd.rs  action_delete.rs  action_done.rs  action_edit.rs  action_export.rs  action_help.rs  action_info.rs  action_list.rs  action_modify.rs  action_start.rs  action_stop.rs  action_type.rs  action_undo.rs  command_parser.rs  lib.rs
crates/bee-cli/: Cargo.toml
crates/bee-cli/src/: bee.rs  cli.rs  config.rs  table.rs
crates/bee-core/: Cargo.toml
crates/bee-core/src/: config.rs  filters.rs  lexer.rs  lexer_test.rs  lib.rs  manager_test.rs  parser.rs  parser_test.rs  task.rs  task_test.rs
crates/bee-core/src/filters/: filters_impl.rs  filters_test.rs  parser.rs  parser_test.rs
crates/bee-core/src/task/: task_prop_parser.rs  task_prop_parser_test.rs
crates/bee-storage/: Cargo.toml
crates/bee-storage/src/: storage.rs  storage_test.rs
src/: command_parser.rs  config.rs  filters.rs  filters_test.rs  lexer.rs  lexer_test.rs  lib.rs  main.rs  manager.rs  manager_test.rs  operation.rs  parser.rs  parser_test.rs  rusk-server.rs  rusk.rs  rusk_test.rs  storage.rs  storage_test.rs  task.rs  task_test.rs
src/actions/: action_add.rs  action_annotate.rs  action_cmd.rs  action_delete.rs  action_done.rs  action_edit.rs  action_export.rs  action_help.rs  action_info.rs  action_list.rs  action_modify.rs  action_start.rs  action_stop.rs  action_undo.rs  common.rs  mod.rs
src/filters/: filters_impl.rs  filters_test.rs  mod.rs  parser.rs  parser_test.rs
src/manager/: json_manager.rs  json_manager_test.rs
src/parse/: command_parser.rs  lexer.rs  lexer_test.rs  mod.rs  parser.rs  parser_test.rs
src/printer/: cli.rs  cli_test.rs  mod.rs  table.rs  table_test.rs
src/task/: filters.rs  filters_test.rs  lexer.rs  lexer_test.rs  manager.rs  manager_test.rs  mod.rs  parser.rs  task.rs  task_prop_parser.rs  task_prop_parser_test.rs  task_test.rs
src/task/filters/: filters_impl.rs  filters_test.rs  parser.rs  parser_test.rs
