[[bin]]
name = "rusk"
path = "src/rusk.rs"

[dependencies]
actix-web = "4"
all_asserts = "2.3.1"
chrono = {version = "0.4", features = ["serde"]}
colored = "2.1"
env_logger = "0.11"
erased-serde = "0.4"
lazy_static = "1.4"
log = "0.4"
once_cell = "1.17"
regex = "1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
shellexpand = "3.1"
terminal_size = "0.4"
toml = "0.7"
typetag = "0.2"

# Be able to manage temporary files or directories.
# This is useful for instance for the 'edit' command that will need
# such feature
tempfile = "3"

[dependencies.uuid]
features = [
    "v4",  # Lets you generate random UUIDs
    "serde",
    "fast-rng",  # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics"  # Enable better diagnostics for compile-time UUIDs
]
version = "1.3.0"

[package]
edition = "2021"
name = "rusk"
version = "0.1.0"

[profile.test]
debug = true
