[workspace]
members = ["crates/*"]

# https://doc.rust-lang.org/cargo/reference/manifest.html#the-edition-field
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["Chloé Dequeker <contac@nelyah.eu>"]
license = "MIT"
repository = "https://github.com/Nelyah/bee"
readme = "README.md"

[workspace.dependencies]
log = "0.4"
env_logger = "0.11"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

# Adds things like assert_true / false
all_asserts = "2.3"

# Be able to have the local time and things like duration
chrono = {version = "0.4", features = ["serde"]}

# Used to iterate over user-facing representation of unicode
# characters (instead of every byte individually)
unicode-segmentation = "1.12"
unicode-normalization = "0.1.24"

# Be able to work with enums more easily, like iterating,
# implementing Display for them, etc.
strum = { version = "0.27", features = ["derive"] }

[workspace.dependencies.uuid]
features = [
    "v4",  # Lets you generate random UUIDs
    "serde",
    "fast-rng",  # Use a faster RNG
    "macro-diagnostics"  # Enable better diagnostics for compile-time UUIDs
]
version = "1.3"

[profile.test]
debug = true
