[package]
name = "bee-actions"
version = { workspace = true }
edition = "2024"

[dependencies]
bee-core = { path = "../bee-core" }

all_asserts.workspace = true
env_logger.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

# Be able to manage temporary files or directories.
# This is useful for instance for the 'edit' command that will need
# such feature
tempfile = "3"
