[[bin]]
name = "bee"
path = "src/bee.rs"

[package]
name = "bee-cli"
version = { workspace = true }
edition = "2024"

[dependencies]
bee-core = { path = "../bee-core" }
bee-actions = { path = "../bee-actions" }
bee-storage = { path = "../bee-storage" }

all_asserts.workspace = true
chrono.workspace = true
env_logger.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
unicode-segmentation.workspace = true
uuid.workspace = true

toml = "0.7"

regex = "1"
terminal_size = "0.4"

# Used for coloured strings and styled strings in CLI output
colored = "2.1"

# This is a hashmap that maintains the order of insertion
# Useful to reproduce the order given in config file for instance
indexmap = {version = "2.7", features = ["serde"]}

# Make it easier for global static data
once_cell = "1.17"
