[package]
name = "bee-core"
version = { workspace = true }
edition = "2024"

[dependencies]

all_asserts.workspace = true
chrono.workspace = true
env_logger.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
unicode-normalization.workspace = true
unicode-segmentation.workspace = true
uuid.workspace = true

toml = "0.7"

# Make it easier for global static data
once_cell = "1.17"

# Used to expand shell-specific symbols such as ~
shellexpand = "3.1"

# Easily Serialise / deserialise `&dyn Type` objects
typetag = "0.2"
